// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataFilters renders 1`] = `
.c6 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c6 g {
  fill: inherit;
  stroke: inherit;
}

.c6 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c6 *[stroke*='#'],
.c6 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c6 *[fill-rule],
.c6 *[FILL-RULE],
.c6 *[fill*='#'],
.c6 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 100%;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
  overflow: auto;
}

.c11 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c13 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 12px;
}

.c15 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c18 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px rgba(0, 0, 0, 0.15);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c20 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 24px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  justify-content: space-between;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  flex-wrap: wrap;
  column-gap: 12px;
  row-gap: 12px;
}

.c19 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c12 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c21 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c21:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c21:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c21:focus >circle,
.c21:focus >ellipse,
.c21:focus >line,
.c21:focus >path,
.c21:focus >polygon,
.c21:focus >polyline,
.c21:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c21:focus ::-moz-focus-inner {
  border: 0;
}

.c21:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c21:focus:not(:focus-visible) >circle,
.c21:focus:not(:focus-visible) >ellipse,
.c21:focus:not(:focus-visible) >line,
.c21:focus:not(:focus-visible) >path,
.c21:focus:not(:focus-visible) >polygon,
.c21:focus:not(:focus-visible) >polyline,
.c21:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c21:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c8 {
  max-width: 100%;
}

.c14 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c14:hover input:not([disabled])+div,
.c14:hover input:not([disabled])+span {
  border-color: #000000;
}

.c17 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c17:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c16 {
  flex-shrink: 0;
}

.c7 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  padding-left: 48px;
}

.c7:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c7:focus >circle,
.c7:focus >ellipse,
.c7:focus >line,
.c7:focus >path,
.c7:focus >polygon,
.c7:focus >polyline,
.c7:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c7:focus ::-moz-focus-inner {
  border: 0;
}

.c7::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c7::-moz-placeholder {
  color: #AAAAAA;
}

.c7:-ms-input-placeholder {
  color: #AAAAAA;
}

.c7 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c7::-moz-focus-inner {
  border: none;
  outline: none;
}

.c7:-moz-placeholder,
.c7::-moz-placeholder {
  opacity: 1;
}

.c4 {
  position: relative;
  width: 100%;
}

.c5 {
  position: absolute;
  display: flex;
  justify: center;
  top: 50%;
  transform: translateY(-50%);
  pointer-events: none;
  left: 12px;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c11 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c13 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c13 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c15 {
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c18 {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}

@media only screen and (max-width: 768px) {
  .c20 {
    margin-top: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    column-gap: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c19 {
    height: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <svg
              aria-label="Search"
              class="c6"
              viewBox="0 0 24 24"
            >
              <path
                d="m15 15 7 7-7-7zm-5.5 2a7.5 7.5 0 1 0 0-15 7.5 7.5 0 0 0 0 15z"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
          <input
            aria-label="Search"
            autocomplete="off"
            class="c7"
            id="data--search"
            name="_search"
            type="search"
            value=""
          />
        </div>
      </div>
      <form
        class="c8"
      >
        <div
          class="c9"
        >
          <div
            class="c10"
          >
            <div
              class="c1"
            >
              <div
                class="c11 "
              >
                <label
                  class="c12"
                  for="data-name"
                >
                  name
                </label>
                <div
                  class="c13 FormField__FormFieldContentBox-sc-m9hood-1"
                >
                  <div
                    class="c3 StyledCheckBoxGroup-sc-2nhc5d-0"
                    id="data-name"
                    role="group"
                  >
                    <label
                      class="c14"
                    >
                      <div
                        class="c15 c16"
                      >
                        <input
                          class="c17"
                          type="checkbox"
                        />
                        <div
                          class="c18 "
                        />
                      </div>
                      <span>
                        a
                      </span>
                    </label>
                    <div
                      class="c19"
                    />
                    <label
                      class="c14"
                    >
                      <div
                        class="c15 c16"
                      >
                        <input
                          class="c17"
                          type="checkbox"
                        />
                        <div
                          class="c18 "
                        />
                      </div>
                      <span>
                        b
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <footer
            class="c20"
          >
            <button
              class="c21"
              type="submit"
            >
              Apply filters
            </button>
          </footer>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`DataFilters renders outside grommet wrapper 1`] = `
.c5 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c5 g {
  fill: inherit;
  stroke: inherit;
}

.c5 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c5 *[stroke*='#'],
.c5 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c5 *[fill-rule],
.c5 *[FILL-RULE],
.c5 *[fill*='#'],
.c5 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  column-gap: 12px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 100%;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
  overflow: auto;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 12px;
}

.c14 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c17 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px rgba(0, 0, 0, 0.15);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c19 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 24px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  justify-content: space-between;
}

.c18 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c11 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c20 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c20:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c20:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c20:focus >circle,
.c20:focus >ellipse,
.c20:focus >line,
.c20:focus >path,
.c20:focus >polygon,
.c20:focus >polyline,
.c20:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c20:focus ::-moz-focus-inner {
  border: 0;
}

.c20:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c20:focus:not(:focus-visible) >circle,
.c20:focus:not(:focus-visible) >ellipse,
.c20:focus:not(:focus-visible) >line,
.c20:focus:not(:focus-visible) >path,
.c20:focus:not(:focus-visible) >polygon,
.c20:focus:not(:focus-visible) >polyline,
.c20:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c20:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c7 {
  max-width: 100%;
}

.c13 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c13:hover input:not([disabled])+div,
.c13:hover input:not([disabled])+span {
  border-color: #000000;
}

.c16 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c16:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c15 {
  flex-shrink: 0;
}

.c6 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  padding-left: 48px;
}

.c6:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c6:focus >circle,
.c6:focus >ellipse,
.c6:focus >line,
.c6:focus >path,
.c6:focus >polygon,
.c6:focus >polyline,
.c6:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c6:focus ::-moz-focus-inner {
  border: 0;
}

.c6::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c6::-moz-placeholder {
  color: #AAAAAA;
}

.c6:-ms-input-placeholder {
  color: #AAAAAA;
}

.c6 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c6::-moz-focus-inner {
  border: none;
  outline: none;
}

.c6:-moz-placeholder,
.c6::-moz-placeholder {
  opacity: 1;
}

.c3 {
  position: relative;
  width: 100%;
}

.c4 {
  position: absolute;
  display: flex;
  justify: center;
  top: 50%;
  transform: translateY(-50%);
  pointer-events: none;
  left: 12px;
}

@media only screen and (max-width: 768px) {
  .c1 {
    column-gap: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c10 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c12 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c12 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c17 {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}

@media only screen and (max-width: 768px) {
  .c19 {
    margin-top: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c18 {
    height: 6px;
  }
}

<div
  class="c0"
  id="data"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <svg
            aria-label="Search"
            class="c5"
            viewBox="0 0 24 24"
          >
            <path
              d="m15 15 7 7-7-7zm-5.5 2a7.5 7.5 0 1 0 0-15 7.5 7.5 0 0 0 0 15z"
              fill="none"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </div>
        <input
          aria-label="Search"
          autocomplete="off"
          class="c6"
          id="data--search"
          name="_search"
          type="search"
          value=""
        />
      </div>
    </div>
    <form
      class="c7"
    >
      <div
        class="c8"
      >
        <div
          class="c9"
        >
          <div
            class="c0"
          >
            <div
              class="c10 "
            >
              <label
                class="c11"
                for="data-name"
              >
                name
              </label>
              <div
                class="c12 FormField__FormFieldContentBox-sc-m9hood-1"
              >
                <div
                  class="c2 StyledCheckBoxGroup-sc-2nhc5d-0"
                  id="data-name"
                  role="group"
                >
                  <label
                    class="c13"
                  >
                    <div
                      class="c14 c15"
                    >
                      <input
                        class="c16"
                        type="checkbox"
                      />
                      <div
                        class="c17 "
                      />
                    </div>
                    <span>
                      a
                    </span>
                  </label>
                  <div
                    class="c18"
                  />
                  <label
                    class="c13"
                  >
                    <div
                      class="c14 c15"
                    >
                      <input
                        class="c16"
                        type="checkbox"
                      />
                      <div
                        class="c17 "
                      />
                    </div>
                    <span>
                      b
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
        <footer
          class="c19"
        >
          <button
            class="c20"
            type="submit"
          >
            Apply filters
          </button>
        </footer>
      </div>
    </form>
  </div>
</div>
`;
